Fixed mobile sizing issue
Fixed issue on mobile screens where the Menu gif and the google map were too large.

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ html, body {
     margin: auto;
     height: 200px;
     min-height: 300px;
-    min-width: 285px;
+    min-width: 250px;
     max-width: 450px;
 }
 .menu-attention-text {
